--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,13 @@
 }
 
 .hw {
-
+    padding: 30px 50px;
+    border-top: 1px solid #c9c9c9;
+    border-bottom: 1px solid #c9c9c9;
 }
 
 .hwTitle {
-
+    padding-top: 50px;
+    padding-bottom: 10px;
+    font-weight: 500;
 }
