--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,13 +1,34 @@
 .sendForm {
-
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    gap: 25px;
 }
 
 .textarea {
+    padding-left: 20px;
+    border: none; 
+    overflow: auto; 
+    outline: none;
+    resize: none;
+    min-height: 40px;
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    font-size: 14px;
+    
+}
 
+.textarea::placeholder {
+    line-height: 40px;
 }
 
 .button {
-
+    height: 40px;
+    background: #0066CC;
+    border-radius: 20px;
+    font-size: 16px;
+    color: #ffffff;
+    border: none;
 }
 
 .button:hover {
