--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,52 @@
 .message {
-
+    margin-bottom: 10px;
 }
 
 .imageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .imageAndText img {
-
+    width: 60px;
+    margin-left: 10px;
 }
 
 .text {
-
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    flex-direction: column;
+    padding: 10px;
+    height: 60px;
+    background: #0066CC;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 10px 10px 0 10px;
+    position: relative;
 }
 
 .text:after {
-
+    content: '';
+    border-bottom: 10px solid #0066CC; 
+    border-right: 15px solid transparent;
+    position: absolute;
+    bottom: 0;
+    right: -10px;
 }
 
 .name {
-
+    font-size: 18px;
+    color: #ffffff;
 }
 
 .messageText {
-
+    font-size: 16px;
+    color: #ffffff;
 }
 
 .time {
-
+    display: flex;
+    justify-content: right;
+    margin-right: 17px;
+    font-size: 10px;
 }
