--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,10 +1,15 @@
 .spanBlock {
+    display: flex;
+    align-items:center;
+    gap: 10px;
 }
 
 .span {
+    color: rgba(0, 128, 255, 1);
 }
 
 .input {
+    padding-left: 10px;
 }
 
 .pen {
