--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,18 @@
 .burgerMenuIcon {
+    height: 35px;
+    width: 35px;
 }
 
 .header {
+    width: 100%;
+    height: 60px;
+    padding: 0 50px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header h1 {
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 24px;
 }
