--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,57 @@
 .sidebar {
+    display: none;
 }
 
 .sidebar.open {
+    display: block;
+    width: 315px;
+    height: 100vh;
+    position: absolute;
+    z-index: 5;
+    background-color: #fff;
 }
 
 .background {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .nav {
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .nav a {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: 600;
+    text-decoration: none;
+    color: black;
 }
 
 .nav a:hover {
+    color: rgba(88, 172, 255, 1);
 }
 
 .nav a.active {
+    color: rgb(0, 89, 178);
+    text-decoration: underline;
 }
+
 .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
 }
 
 .close img {
+
 }
