--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,7 +1,9 @@
 .input:focus {
+    border-color: aqua;
 }
 
 .input {
+    padding-left: 10px;
     width: 370px;
     height: 35px;
     outline: none;
